--- a/css/styles.css
+++ b/css/styles.css
@@ -95,13 +95,14 @@ img {
   letter-spacing: 0.02em;
   text-decoration: none;
   padding: 24px 0;
-  transition: color 250ms ease-in-out, text-decoration 250ms ease-in-out;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-item:hover,
 .menu-item:focus,
 .menu-item:active {
   color: #404bbf;
-  text-decoration: underline;
 }
 .current {
   color: var(--OCEAN, #404bbf);
@@ -184,7 +185,9 @@ img {
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition: background-color 250ms ease-in-out;
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-one-button:hover {
   background: #404bbf;
@@ -245,7 +248,6 @@ img {
   background: var(--CLOUD, #f4f4fd);
 }
 .container.section-team-container {
-  background: var(--CLOUD, #f4f4fd);
   padding-left: 15px;
   padding-right: 15px;
   flex-shrink: 0;
@@ -308,7 +310,9 @@ img {
   background-color: #4d5ae5;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms ease-in-out;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon {
   fill: #f4f4fd;
@@ -346,8 +350,10 @@ img {
   padding-left: 32px;
   padding-right: 32px;
   padding-bottom: 164px;
-  transition: transform 250ms ease-in-out;
-  transform: translateX(-100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
 
   background: var(--IRIS, #4d5ae5);
   color: #f4f4fd;
@@ -356,7 +362,7 @@ img {
   letter-spacing: 0.02em;
 }
 .thumb:hover .text {
-  transform: translateX(0);
+  transform: translateY(0);
 }
 .section-portfolio-list {
   display: flex;
@@ -364,7 +370,16 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
-
+.list-item-img {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.list-item-img:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 .name-products {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -440,7 +455,9 @@ img {
   background-color: #4d5ae5;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms ease-in-out;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-icon:hover {
   background-color: #31d0aa;
