--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ img {
 }
 .current {
   color: var(--OCEAN, #404bbf);
+  position: relative;
 }
 .menu-item:after.current::after {
   color: #404bbf;
@@ -135,6 +136,7 @@ img {
 }
 
 .section-one {
+  max-width: 1158px;
   padding: 188px 0;
   background: var(--NAVY-BLUE, #2e2f42);
   background-image: linear-gradient(
@@ -145,6 +147,7 @@ img {
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: cover;
 }
 .container {
   padding: 0 15px;
@@ -180,17 +183,17 @@ img {
   align-items: center;
   gap: 10px;
   border-radius: 4px;
-  background: var(--IRIS, #4d5ae5);
+  background-color: var(--IRIS, #4d5ae5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition-property: background;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-one-button:hover {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 .section-one-button:focus {
   background: #404bbf;
@@ -346,10 +349,7 @@ img {
   bottom: 0;
   left: 0;
   right: 0;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-bottom: 164px;
+  padding: 40px 32px;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
