--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ img {
   position: absolute;
   display: block;
   left: 0;
-  bottom: 1px;
+  bottom: -1px;
 }
 .contacts {
   font-style: normal;
@@ -196,9 +196,7 @@ img {
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-one-button:hover {
   background-color: #404bbf;
@@ -332,7 +330,8 @@ img {
 .icon {
   fill: #f4f4fd;
 }
-.link:hover .linc:focus {
+.link:hover,
+.linc:focus {
   background-color: #404bbf;
 }
 
@@ -420,7 +419,12 @@ img {
   flex-shrink: 0;
   display: flex;
   align-items: flex-start;
+  align-items: baseline;
 }
+.logo-text {
+  margin-right: 120px;
+}
+
 .footer-logo {
   color: var(--IRIS, #4d5ae5);
   font-family: "Raleway", sans-serif;
@@ -454,13 +458,13 @@ img {
   margin-bottom: 16px;
 }
 .footer-link {
-  display: inline-flex;
+  display: flex;
   align-items: flex-start;
   gap: 16px;
   width: 208px;
 }
 .link-icon {
-  display: inline-flex;
+  display: flex;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -471,7 +475,8 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-icon:hover {
+.link-icon:hover,
+.link-icon:focus {
   background-color: #31d0aa;
 }
 .logo-text {
