--- a/css/styles.css
+++ b/css/styles.css
@@ -196,14 +196,16 @@ img {
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.section-one-button:hover {
+.section-one-button:hover,
+.section-one-button:focus {
   background-color: #404bbf;
 }
-.section-one-button:focus {
-  background: #404bbf;
-}
+
 .advantages {
   padding: 120px 0;
 }
@@ -331,7 +333,7 @@ img {
   fill: #f4f4fd;
 }
 .link:hover,
-.linc:focus {
+.link:focus {
   background-color: #404bbf;
 }
 
