--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,6 @@ img {
   margin-left: auto;
 }
 .section-one-button {
-  background: var(--IRIS, #4d5ae5);
   cursor: pointer;
   color: var(--WHITE, #fff);
   font-family: "Roboto", sans-serif;
@@ -191,15 +190,12 @@ img {
   align-items: center;
   gap: 10px;
   border-radius: 4px;
-  background-color: var(--IRIS, #4d5ae5);
+  background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-one-button:hover,
 .section-one-button:focus {
