--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,9 @@ img {
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-one-button:hover,
 .section-one-button:focus {
