--- a/css/styles.css
+++ b/css/styles.css
@@ -194,9 +194,7 @@ img {
   margin-top: 48px;
   margin-right: auto;
   margin-left: auto;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-one-button:hover,
